# recommendation-engine

./: .flake8  .gitignore  .mypy.ini  README.md  pyproject.toml
notebooks/: Recommendations_with_IBM.ipynb
tests/: project_tests.py
